# daoyi_cloud_rs

./: .cursorrules  .gitignore  AGENTS.md  Cargo.toml  README.md  config-example.toml  重构计划.md
crates/libs/daoyi-entity-demo/: Cargo.toml
crates/libs/daoyi-framework/: Cargo.toml
crates/libs/daoyi-framework/src/: lib.rs
crates/libs/daoyi-framework/src/db/: mod.rs
crates/libs/daoyi-framework/src/dy_config/: db_config.rs  jwt_config.rs  mod.rs  nacos_config.rs  rs_server_config.rs  tls_config.rs
crates/libs/daoyi-framework/src/dy_config/spring/: mod.rs
crates/libs/daoyi-framework/src/hoops/: jwt.rs  mod.rs
crates/libs/daoyi-framework/src/utils/: mod.rs
crates/modules/daoyi-gateway/: Cargo.toml
crates/modules/daoyi-gateway/resources/: application.yaml
migration/: .env.example  AGENTS.md  Cargo.toml
migration/src/: lib.rs  m20220101_000001_create_table.rs
resources/: nacos-example.yaml
src/: error.rs  main.rs
src/config/: mod.rs
src/hoops/: custom_middleware_example.rs  jwt.rs  mod.rs
src/routers/: auth.rs  demo.rs  mod.rs  user.rs
